# cobs-codec

./: Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  check.yml  ci.yml
src/: lib.rs  test.rs  test_utils.rs
