[package]
name = "cobs-codec"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Alexander van Ratingen"]
homepage = "https://github.com/alvra/cobs-codec"
repository = "https://github.com/alvra/cobs-codec"
documentation = "https://docs.rs/cobs-codec"
description = "COBS codec for Tokio"
readme = "README.md"
keywords = ["io", "async", "tokio", "codec", "cobs"]

[dependencies]
bytes = "1.5.0"
tokio-util = { version = "0.7.8", features = [ "codec" ] }
thiserror = "1.0.48"

[dev-dependencies]
paste = "1.0.14"
tokio = { version = "1.32.0", features = [ "rt", "macros" ], default-features = false }
futures = { version = "0.3.28", features = [], default-features = false }

